--- a/index.html
+++ b/index.html
@@ -1771,10 +1771,10 @@ button[type="submit"],
   </div>
 </div>
 
-<div id="popup-column-3" style="display: none; position: absolute; z-index: 1002; top: 82.5vh; left: 0; width: 100vw;">
+<div id="popup-column-3" style="display: none; position: absolute; z-index: 1002; top: 82.5vh; max-height: 95vh; left: 0; width: 100vw;">
   <div id="popup-column-container-3" class="yourfovcontainer" onclick="event.stopPropagation();">
 
-    <div id="popup-column-3-border"style="display: none; align-items: center;  top:55vh;" >
+    <div id="popup-column-3-border"style="display: none; align-items: center;" >
       <label style="margin-bottom: 1vh; font-size: 1.5vh;">Border:</label>
       <div style="display: flex; align-items: center; padding-bottom: 1vh;">
       <input type="number" id="color-red-border3" class="yourfov" style="margin-left: 1vw;" max="255" placeholder="Red"/>
@@ -1783,7 +1783,7 @@ button[type="submit"],
       </div>
     </div>
 
-    <div id="popup-column-3-number" style="display: none; align-items: center; top:70vh;" >
+    <div id="popup-column-3-number" style="display: none; align-items: center;" >
       <label style="margin-bottom: 1vh; font-size: 1.5vh;">Number:</label>
       <div style="display: flex; align-items: center; padding-bottom: 1vh;">
       <input type="number" id="color-red-number3" class="yourfov" style="margin-left: 1vw;" max="255" placeholder="Red"/>
@@ -1792,7 +1792,7 @@ button[type="submit"],
       </div>
     </div>
 
-    <div id="popup-column-3-close" style="display: none; align-items: center;  top:70vh;" >
+    <div id="popup-column-3-close" style="display: none; align-items: center;" >
       <label style="margin-bottom: 1vh; font-size: 1.5vh;">Close:</label>
       <div style="display: flex; align-items: center; padding-bottom: 1vh;">
       <input type="number" id="color-red-close3" class="yourfov" style="margin-left: 1vw;" max="255" placeholder="Red"/>
@@ -1801,7 +1801,7 @@ button[type="submit"],
       </div>
     </div>
 
-    <div id="popup-column-3-accid" style="display: none; align-items: center; top:70vh;" >
+    <div id="popup-column-3-accid" style="display: none; align-items: center;" >
       <label style="margin-bottom: 1vh; font-size: 1.5vh;">AccID:</label>
       <div style="display: flex; align-items: center; padding-bottom: 1vh;">
       <input type="number" id="color-red-accid3" class="yourfov" style="margin-left: 1vw;" max="255" placeholder="Red"/>
@@ -1810,7 +1810,7 @@ button[type="submit"],
       </div>
     </div>
 
-    <div id="popup-column-3-username" style="display: none; align-items: center; top:70vh;" >
+    <div id="popup-column-3-username" style="display: none; align-items: center;" >
       <label style="margin-bottom: 1vh; font-size: 1.5vh;">Username:</label>
       <div style="display: flex; align-items: center; padding-bottom: 1vh;">
       <input type="number" id="color-red-username3" class="yourfov" style="margin-left: 1vw;" max="255" placeholder="Red"/>
@@ -1819,7 +1819,7 @@ button[type="submit"],
       </div>
     </div>
 
-    <div id="popup-column-3-titles" style="display: none; align-items: center; top:70vh;" >
+    <div id="popup-column-3-titles" style="display: none; align-items: center;" >
       <label style="margin-bottom: 1vh; font-size: 1.5vh;">Title:</label>
       <div style="display: flex; align-items: center; padding-bottom: 1vh;">
       <input type="number" id="color-red-titles3" class="yourfov" style="margin-left: 1vw;" max="255" placeholder="Red"/>
@@ -1828,7 +1828,7 @@ button[type="submit"],
       </div>
     </div>
 
-    <div id="popup-column-3-text" style="display: none; align-items: center; top:70vh;" >
+    <div id="popup-column-3-text" style="display: none; align-items: center;" >
       <label style="margin-bottom: 1vh; font-size: 1.5vh;">Text:</label>
       <div style="display: flex; align-items: center; padding-bottom: 1vh;">
       <input type="number" id="color-red-text3" class="yourfov" style="margin-left: 1vw;" max="255" placeholder="Red"/>
@@ -1837,14 +1837,14 @@ button[type="submit"],
       </div>
     </div>
 
-    <div id="popup-column-3-font" style="display: none; align-items: center; top:70vh;" >
+    <div id="popup-column-3-font" style="display: none; align-items: center;" >
       <label style="margin-bottom: 1vh; font-size: 1.5vh;">Font:</label>
       <div style="display: flex; align-items: center; padding-bottom: 1vh;">
       <input type="number" id="popup-font-size3" class="yourfov" style="margin-left: 1vw;" value='2' max="255" placeholder="Default Size = 2"/>
       </div>
     </div>
 
-    <div id="popup-column-3-save" style="top:90vh;" ></div>
+    <div id="popup-column-3-save" ></div>
     <div id="savepopup3" class="toolbar-column-btns" style="text-shadow: 0 0 0.5vh black; text-align: center; padding-top: 1vh;">Save popup
     </div>
     </div>
