--- a/index.html
+++ b/index.html
@@ -1772,7 +1772,7 @@ button[type="submit"],
 </div>
 
 <div id="popup-column-3" style="display: none; position: absolute; z-index: 1002; top: 82.5vh; max-height: 95vh; left: 0; width: 100vw;">
-  <div id="popup-column-container-3" class="yourfovcontainer" onclick="event.stopPropagation();">
+  <div id="popup-column-container-3" style="max-height: 95vh;" class="yourfovcontainer" onclick="event.stopPropagation();">
 
     <div id="popup-column-3-border"style="display: none; align-items: center;" >
       <label style="margin-bottom: 1vh; font-size: 1.5vh;">Border:</label>
