--- a/index.html
+++ b/index.html
@@ -1775,6 +1775,11 @@ button[type="submit"],
 <div id="popup-column-3" style="position: fixed; bottom: 2.5vh; left: 0; width: 100vw; z-index: 1002; max-height: 50vh; overflow-y: auto;">
   <div id="popup-column-container-3" class="yourfovcontainer" style="display: none; flex-direction: column;" onclick="event.stopPropagation();">
 
+    <div style="display: flex; align-items: center;">
+      <label for="color-picker" class="yourfov">Pick Color:</label>
+      <input type="color" id="color-picker-popup-border" class="yourfov" style="margin-left: 1vw;" onchange="updateSlidersFromPicker()">
+    </div>
+
     <div id="popup-column-3-border"style="display: none; align-items: center;" >
       <label style="margin-bottom: 1vh; font-size: 1.5vh;">Border:</label>
       <div style="display: flex; align-items: center; padding-bottom: 1vh;">
@@ -7121,6 +7126,30 @@ document.getElementById("color-blue-text3").addEventListener("input", (event) =>
 
 document.getElementById("popup-font-size3").addEventListener("input", (event) => {updatePopupFontSize3();});
 
+// Convert RGB to Hex for color picker
+function rgbToHex(r, g, b) {
+    return `#${((1 << 24) + (parseInt(r) << 16) + (parseInt(g) << 8) + parseInt(b)).toString(16).slice(1).padStart(6, '0')}`;
+  }
+
+  // Convert Hex to RGB for sliders
+  function hexToRgb(hex) {
+    const bigint = parseInt(hex.slice(1), 16);
+    return {
+      r: (bigint >> 16) & 255,
+      g: (bigint >> 8) & 255,
+      b: bigint & 255
+    };
+}
+
+document.getElementById('color-picker-popup-border').addEventListener('input', (event) => {
+    const color = event.target.value;
+    const { r, g, b } = hexToRgb(color);
+    document.getElementById('color-red-border').value = r;
+    document.getElementById('color-green-border').value = g;
+    document.getElementById('color-blue-border').value = b;
+    updatePopupBorder();
+});
+
 function updatePopupBorder() {
     const red_border = document.getElementById("color-red-border").value;
     const green_border = document.getElementById("color-green-border").value;
@@ -7135,6 +7164,8 @@ function updatePopupBorder() {
     popupContents.forEach(popup => {
         popup.style.borderColor = color_border;
     });
+
+    document.getElementById('color-picker-popup-border').value = rgbToHex(red_border, green_border, blue_border);
 }
 
 function updatePopupBorder3() {
@@ -7743,7 +7774,6 @@ async function loadButtonInputSettings() {
                 const colorBlueBorderButtonInput = document.getElementById("color-blue-border-button-input").value;
                 const fontForButtonInput = document.getElementById("font-for-button-input").value;
                 let transparencyButtonInput = document.getElementById("color-red-transparency-button-input").value;
-                // Enforce minimum value of 0.5 for transparency
                 transparencyButtonInput = Math.max(parseFloat(transparencyButtonInput), 0.5);
                 const colorRedFontColorButtonInput = document.getElementById("color-red-font-color-button-input").value;
                 const colorGreenFontColorButtonInput = document.getElementById("color-green-font-color-button-input").value;
